2006-01-19  Nick Garnett  <nickg@ecoscentric.com>

	* src/sched/sched.cxx (thread_entry): Fixed a bug which could
	cause a thread to be started with a non-zero scheduler lock. The
	previous code only decremented it by 1 so if the previous thread
	was executing with the lock > 1 the thread ended up with a
	non-zero lock. This is fixed by decrementing the lock in a loop
	until it reaches zero.

	* src/common/thread.cxx (idle_thread_main): Added an assert for a
	non-zero scheduler lock.

2006-01-10  Nick Garnett  <nickg@ecoscentric.com>

	* src/sched/sched.cxx: 
	* include/sched.hxx (class Cyg_Scheduler): Added thread_entry()
	member function. This handles thread startup housekeeping. Zeroing
	the scheduler lock is handled by calling unlock() so that DSRs may
	be run.

	* src/common/thread.cxx (thread_entry): Refactored code to call
	Cyg_Scheduler::thread_entry() instead of doing all the work here.	

2005-11-23  Sergei Organov  <osv@javad.com>

	* doc/kernel.sgml: Fix description of CYG_ISR_CALL_DSR and
	CYG_ISR_HANDLED. Fix example isr_function() accordingly.

2005-10-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/flag.hxx: We need thread.inl for the empty() function
	implementation which the compiler wants to inline.
	
2005-08-03  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/ksem1.c: Type fix to fix a compiler warning.
	* tests/mutex3.cxx: new cannot be both static and global.
	* tests/testaux.hxx: Ditto

2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sync/mbox.cxx (tryget,peak_item): initialize local variable
	to avoid compiler warning.
	
2005-06-21  Peter Korsgaard  <jacmet@sunsite.dk>

	* tests/kcache2.c (test_dcache_operation): Fixed compiler warnings
	about formats strings for diag_printf.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/tm_basic.cxx (_run_all_tests): Fixed compiler warning.

2004-12-15  Sergei Organov <osv@topconrd.ru>

	* cdl/scheduler.cdl: Correct the description of
	CYGIMP_KERNEL_SCHED_SORTED_QUEUES
	